buildscript {
    repositories {
        mavenCentral()
        maven { url 'http://repo.javalite.io' }
        jcenter()
    }
    dependencies {
		classpath group: 'org.javalite', name: 'activejdbc-gradle-plugin', version: '2.2'
    }
}

plugins {
    id 'java'
    id 'application'
    id 'eclipse'
    id 'idea'
}

apply plugin: 'org.javalite.activejdbc'

repositories {
	mavenCentral()
	jcenter()
}

dependencies {
    // The production code uses the SLF4J logging API at compile time
    implementation 'org.slf4j:slf4j-api:1.7.+'
    testCompile 'junit:junit:4.+'
        
    // JavaLite
    implementation 'org.javalite:activejdbc:2.3'
    implementation 'org.javalite:activejdbc-instrumentation:2.3'

    // DB
    implementation 'com.h2database:h2:1.4.+'
    implementation 'org.flywaydb:flyway-core:7.3.+'
    
    // hbci4j (https://github.com/hbci4j/hbci4java/)
    implementation 'com.github.hbci4j:hbci4j-core:3.1.+'
    
    // Icons: https://aalmiray.github.io/ikonli/
    implementation 'org.kordamp.ikonli:ikonli-swing:2.4.+'
    // https://aalmiray.github.io/ikonli/cheat-sheet-websymbols.html
    implementation 'org.kordamp.ikonli:ikonli-websymbols-pack:2.4.+'
    
    // Apache commons https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation 'org.apache.commons:commons-lang3:3.11'
	
	// https://mvnrepository.com/artifact/org.jfree/jfreechart
    implementation 'org.jfree:jfreechart:1.5.+'
    implementation 'org.jfree:jcommon:1.0.+'
	
}

jar {
    manifest {
        attributes 'Main-Class': 'de.bjrn.budgetbook.BudgetBookSwing'
    }
}

mainClassName = 'de.bjrn.budgetbook.BudgetBookSwing'
sourceCompatibility = '1.8'
